@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v26.2.1-cur, done by sprscc13@mrn0b0dy.
--;-;-;2026-02-01 14:42:27, took 00:12:53, with 50 workers, on 4240 cases, 0 failed, 0 traces, 9 retries
+-;-;-;2026-02-01 15:14:41, took 00:13:09, with 50 workers, on 4242 cases, 0 failed, 0 traces, 6 retries
 -;-;-;./rtr.bin, null
 http://sources.freertr.org/cfg/basic01.tst;basic01.tst;success;dummy test
 http://sources.freertr.org/cfg/basic02.tst;basic02.tst;success;interface with slot
@@ -3698,6 +3698,8 @@ http://sources.freertr.org/cfg/rout-bgp935.tst;rout-bgp935.tst;success;mspw over
 http://sources.freertr.org/cfg/rout-bgp936.tst;rout-bgp936.tst;success;mspw over ibgp rr
 http://sources.freertr.org/cfg/rout-bgp937.tst;rout-bgp937.tst;success;mspw over confed bgp
 http://sources.freertr.org/cfg/rout-bgp938.tst;rout-bgp938.tst;success;mspw over bgp route server
+http://sources.freertr.org/cfg/rout-bgp939.tst;rout-bgp939.tst;success;ethersite mspw over ibgp
+http://sources.freertr.org/cfg/rout-bgp940.tst;rout-bgp940.tst;success;mspw over bgp with soft-reconfig
 http://sources.freertr.org/cfg/rout-eigrp01.tst;rout-eigrp01.tst;success;eigrp point2point connection
 http://sources.freertr.org/cfg/rout-eigrp02.tst;rout-eigrp02.tst;success;eigrp point2multipoint connection
 http://sources.freertr.org/cfg/rout-eigrp03.tst;rout-eigrp03.tst;success;eigrp point2point chain
