@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v26.2.1-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2026-02-01 14:42:27, took 00:12:53, with 50 workers, on 4240 cases, 0 failed, 0 traces, 9 retries<br/>
+tested: 2026-02-01 15:14:41, took 00:13:09, with 50 workers, on 4242 cases, 0 failed, 0 traces, 6 retries<br/>
 jvm: ./rtr.bin, other: null<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -3710,6 +3710,8 @@ jvm: ./rtr.bin, other: null<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-bgp936.tst">rout-bgp936.tst</a></td><td>success</td><td>mspw over ibgp rr</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-bgp937.tst">rout-bgp937.tst</a></td><td>success</td><td>mspw over confed bgp</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-bgp938.tst">rout-bgp938.tst</a></td><td>success</td><td>mspw over bgp route server</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/rout-bgp939.tst">rout-bgp939.tst</a></td><td>success</td><td>ethersite mspw over ibgp</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/rout-bgp940.tst">rout-bgp940.tst</a></td><td>success</td><td>mspw over bgp with soft-reconfig</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-eigrp01.tst">rout-eigrp01.tst</a></td><td>success</td><td>eigrp point2point connection</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-eigrp02.tst">rout-eigrp02.tst</a></td><td>success</td><td>eigrp point2multipoint connection</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-eigrp03.tst">rout-eigrp03.tst</a></td><td>success</td><td>eigrp point2point chain</td></tr>
